# fastApi_lms

./: main.py  pyproject.toml
