[tool.poetry]
name = "fastapi-api-lms"
version = "0.1.0"
description = ""
authors = ["Mizanur Rahman <mizan.prog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
pydantic = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
